Adição da classe de Permissões

--- a/src/main/resources/static/images/index.html
+++ b/src/main/resources/static/images/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragmentos :: imports-css(title='Choperia')}">
+<head th:replace="~{fragmentos :: import-css(title="Choperia")}">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
 	
